<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ViewFlipper
        android:id="@+id/dashboard_flipper"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">
            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_loading" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/shop_list_items_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/shop_list_items_add_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_margin="16dp"
                android:src="@drawable/ic_add_circle_black_24db"
                app:fabSize="normal"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/shop_list_items_error_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/error_loading_data"
                android:textSize="18sp"
                android:layout_centerInParent="true"/>

            <Button
                android:id="@+id/shop_list_items_error_action_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_retry"
                android:layout_below="@id/shop_list_items_error_message"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"/>
        </RelativeLayout>
    </ViewFlipper>

</RelativeLayout>